src/snapshots/fuzz_crash/fuzz_crash_012.txt
~~~META
description=fuzz crash
type=file
~~~SOURCE
 ||(|(l888888888|
~~~PROBLEMS
MISSING HEADER

The module header is missing.

 ||(|(l888888888|
Note: This is a parse error. Check your syntax.
SYNTAX PROBLEM

I didn't expect to see this in the pattern.

 ||(|(l888888888|
Note: This is a parse error. Check your syntax.
SYNTAX PROBLEM

I didn't expect to see this in the pattern.

 ||(|(l888888888|
Note: This is a parse error. Check your syntax.
SYNTAX PROBLEM

Expected '|' in this expression.

 ||(|(l888888888|
Note: This is a parse error. Check your syntax.
INVALID STATEMENT

This statement is not allowed at the top level.

 ||(|(l888888888|
Only definitions, type annotations, and imports are allowed at the top level.
~~~TOKENS
OpBar(1:2-1:3),OpBar(1:3-1:4),NoSpaceOpenRound(1:4-1:5),OpBar(1:5-1:6),NoSpaceOpenRound(1:6-1:7),LowerIdent(1:7-1:17),OpBar(1:17-1:18),EndOfFile(1:18-1:18),
~~~PARSE
(file (1:2-1:18)
	(malformed_header (1:2-1:3) "missing_header")
	(statements (malformed_expr (1:18-1:18) "expected_expr_bar")))
~~~FORMATTED

~~~CANONICALIZE
(can_ir (top_level_defs "empty"))
~~~END